<resources>
    <string name="app_name">Flight Plan Management System</string>

    <string name="create_fp">Create Flight Plan</string>
    <string name="manage_fp">Manage Flight Plans</string>
    <string name="manage_res">Manage Resources</string>
    <string name="set_prefs">Set Preferences</string>
    <string name="start_flight">Start Flight</string>
    <string name="title_activity_start">Start</string>

    <string name="origin">Origin</string>
    <string name="dest">Destination</string>
    <string name="aircraft">Aircraft</string>
    <string name="submit">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="find_origin">Find Origin</string>
    <string name="find_dest">Find Destination</string>
    <string name="find_aircraft">Find Aircraft</string>
    <string name="title_activity_create_flight_plan">Create Flight Plan</string>

    <string name="flight_type_IFR">Flight Regulation: IFR</string>
    <string name="name">Name</string>
    <string name="type">type</string>
    <string name="aircraft_id">Aircraft ID</string>
    <string name="true_airspeed">True Airspeed (Knots)</string>
    <string name="flight_date">Date of Flight</string>
    <string name="depart_time">Departure Time (24Hr)</string>
    <string name="route">Route</string>
    <string name="shortest_route">Shortest Route</string>
    <string name="fastest_route">Fastest Route</string>
    <string name="archived_route">Archived Route</string>
    <string name="custom_route">Custom Route</string>
    <string name="cruising_altitude">Cruising Altitude</string>
    <string name="estimated_time_enroute">Estimated Time Enroute</string>
    <string name="ete">ETE</string>
    <string name="fuel_on_board">Fuel on Board</string>
    <string name="alternative_airports">Alternative Airports</string>
    <string name="pilot_name">Pilot Name</string>
    <string name="contact_info">Contact Info</string>
    <string name="number_onboard">Number Onboard</string>
    <string name="aircraft_color">Color of Aircraft</string>
    <string name="dest_contact_info">Destination Contact Information</string>
    <string name="remarks">Remarks</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="at_and_se">Aircraft Type and Special Equipment</string>
    <string name="title_activity_archived_routes">Archived Routes</string>

    <string name="departuredest">Departure - Destination</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    <string name="number_waypoints">Number \nof \nWaypoints</string>
    <string name="title_activity_route_details">Route Details</string>
    <string name="clander_discription">A clickable Calender image</string>
    <string name="title_activity_custom_routes">Custom Routes</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_manage_flight_plans">Manage Flight Plans</string>
    <string name="name_v21">Name</string>
    <string name="departure_city">City of Departure</string>
    <string name="dest_city">City of Destination</string>
    <string name="alt_ap1">Alternate Airport 1</string>
    <string name="alt_ap3">Alternate Airport 3</string>
    <string name="alt_ap2">Alternate Airport 2</string>
    <string name="ac_used">Aircraft Being Used</string>
    <string name="hint_depart_time">Departure Time (24hr)</string>

    <string-array name="array_aircraft_id">
        <item>Choose Aircraft</item>
        <item>Aircraft 1</item>
        <item>Aircraft 2</item>
        <item>Aircraft 3</item>
        <item>Add New</item>
    </string-array>

    <string-array name="array_dept_dest">
        <item>Choose City</item>
        <item>El Paso</item>
        <item>Las Cruces</item>
        <item>Alamogordo</item>
        <item>Santa Fe</item>
        <item>Albuquerque</item>
    </string-array>

    <string-array name="array_time_zone">
        <item>Choose Time Zone</item>
        <item>Mountain</item>
        <item>Central</item>
        <item>Pacific</item>
        <item>Eastern</item>
    </string-array>

    <string-array name="array_airport_code">
        <item>Choose Airport</item>
        <item>ELP</item>
        <item>LRU</item>
        <item>SAF</item>
        <item>ABQ</item>
        <item>ALM</item>
    </string-array>

    <!-- Create aircraft strings-->
    <string name="title_activity_create_aircraft">Aircraft</string>
    <string name="ac_nickname">enter aircraft nickname</string>
    <string name="title_activity_manage_resources">Manage Resources</string>
    <string name="routes">Routes</string>
    <string name="waypoints">Waypoints</string>
    <string name="title_activity_view__set_preferences">Set Preferences</string>
    <string name="display_waypoints">Display Waypoints</string>
    <string name="flight_preferences">Flight Preferences</string>
    <string name="terr_above_alt">Terrain above altitude (feet)</string>
    <string name="avoid_water">Avoid Flying Over Water</string>
    <string name="map_view_pref">Map View Preferences</string>
    <string name="display_topo_map">Display Topographical Map</string>
    <string name="title_activity_view__start_flight">Start Flight</string>
    <string name="narrow_flight_date">Date of Flight</string>
    <string name="title_activity_in_flight">In Flight</string>

    <string name="current_airspeed">Current Airspeed (knots)</string>
    <string name="current_altitude">Current Altitude</string>
    <string name="remaining_fuel">Remaining Fuel (gallons)</string>
    <string name="current_heading">Current Heading (degrees)</string>
    <string name="current_coordinates">Current Coordinates</string>
    <string name="enter_name">enter flight plan nickname</string>
    <string name="departure_date">Departure Date</string>
    <string name="et_enter_pilot_name">enter pilot name</string>
    <string name="skip_sign_in">SKIP</string>

    <string name="eta_label">ETA:</string>
    <string name="rta_label">RTA:</string>
    <string name="speed_label">Speed:</string>
    <string name="altitude_label">Altitude:</string>
    <string name="fuel_label">Remaining Fuel:</string>
    <string name="heading_label">Heading:</string>
    <string name="missing_field">A field was missing or entered incorrectly. Please ensure all fields are present and correct and try again.</string>
    <string name="multiple_selections">Multiple flight plans selected. Please select only one and try again.</string>
    <string name="no_selections">No flight plan selected. Please select one and try again.</string>
</resources>
