<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.utep.cs.pickax.fpms.View_SetPreferences"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/flight_preferences"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/terr_above_alt"
        android:ems="10"
        android:id="@+id/et_terrain_above_alt"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avoid_water"
        android:id="@+id/cb_avoid_flying_water"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_aircraft_id"
        android:spinnerMode="dropdown"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/map_view_pref"
        android:layout_marginTop="40dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_waypoints"
        android:id="@+id/cb_display_waypoints"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_topo_map"
        android:id="@+id/cb_display_topo_map"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"/>

</LinearLayout>
