<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.utep.cs.pickax.fpms.ManageResources"
    android:orientation="vertical"
    android:gravity="center">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/aircraft"
                android:id="@+id/btn_manage_aircraft"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/routes"
                android:id="@+id/btn_manage_routes"
                android:layout_gravity="center" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/waypoints"
                android:id="@+id/btn_manage_waypoints"
                android:layout_gravity="center" />

</LinearLayout>


