<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.utep.cs.pickax.fpms.StartFlight"
    android:gravity="center_vertical"
    android:fillViewport="true">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:id="@+id/flights_table" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp" >

                    <Space
                        android:layout_width="40dp"
                        android:layout_column="0" />

                    <TextView android:id="@+id/tv_name_col"
                        android:text="@string/name"
                        android:layout_column="1"
                        android:textStyle="bold"
                        style="@style/cell_padding"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:text="@string/narrow_flight_date"
                        android:id="@+id/tv_DOF"
                        android:layout_column="2"
                        android:textStyle="bold"
                        style="@style/cell_padding"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:text="@string/departuredest"
                        android:id="@+id/tv_departure_dest_col"
                        android:layout_column="3"
                        android:textStyle="bold"
                        style="@style/cell_padding"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:text="@string/depart_time"
                        android:id="@+id/tv_depart_time"
                        android:layout_column="4"
                        android:textStyle="bold"
                        style="@style/cell_padding"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"/>
                </TableRow>

                <View
                    style="@style/Divider"
                    android:background="@android:color/darker_gray"/>


            </TableLayout>

        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_home"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/home"/>

            <Button
                android:id="@+id/btn_start_flight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_flight"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>