<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="edu.utep.cs.pickax.fpms.TimeCard"
    android:background="#000000"
    >

    <!--Speed-->
    <TextView
        android:id="@+id/card3_speed_label"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_label"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/in_flight_speed"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text=" ..."
        android:layout_toEndOf="@id/card3_speed_label" />


    <!--ETA-->
    <TextView
        android:id="@+id/card3_eta_label"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eta_label"
        android:textSize="30sp"
        android:layout_below="@id/card3_speed_label" />
    <TextView
        android:id="@+id/in_flight_eta"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text=" ..."
        android:layout_below="@id/card3_speed_label"
        android:layout_toEndOf="@id/card3_eta_label" />


    <!--RTA-->
    <TextView
        android:id="@+id/card3_rta_label"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rta_label"
        android:textSize="30sp"
        android:layout_below="@id/card3_eta_label" />
    <TextView
        android:id="@+id/in_flight_rta"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text=" ..."
        android:layout_below="@id/card3_eta_label"
        android:layout_toEndOf="@id/card3_rta_label" />


    <!--Altitude-->
    <TextView
        android:id="@+id/card3_altitude_label"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altitude_label"
        android:textSize="30sp"
        android:layout_below="@id/card3_rta_label" />
    <TextView
        android:id="@+id/in_flight_altitude"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text=" ..."
        android:layout_below="@id/card3_rta_label"
        android:layout_toEndOf="@id/card3_altitude_label" />


    <!--Fuel-->
    <TextView
        android:id="@+id/card3_fuel_label"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuel_label"
        android:textSize="30sp"
        android:layout_below="@id/card3_altitude_label" />
    <TextView
        android:id="@+id/in_flight_fuel"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text=" ..."
        android:layout_below="@id/card3_altitude_label"
        android:layout_toEndOf="@id/card3_fuel_label" />


    <!--Heading-->
    <TextView
        android:id="@+id/card3_heading_label"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading_label"
        android:textSize="30sp"
        android:layout_below="@id/card3_fuel_label" />
    <TextView
        android:id="@+id/in_flight_heading"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text=" ..."
        android:layout_below="@id/card3_fuel_label"
        android:layout_toEndOf="@id/card3_heading_label" />

</RelativeLayout>
