<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="edu.utep.cs.pickax.fpms.MapCard"
    android:orientation="horizontal"
    android:background="#000000">

    <fragment
        android:id="@+id/m_map"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="0dp"
        class="edu.utep.cs.pickax.fpms.GoogleMap"
        android:padding="16dp"
        >

    </fragment>

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:padding="16dp"
        >

        <!--Speed-->
        <TextView
            android:id="@+id/card1_speed_label"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_label"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/in_flight_speed"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text=" ..."
            android:layout_toEndOf="@id/card1_speed_label" />

        <!--Altitude-->
        <TextView
            android:id="@+id/card1_altitude_label"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altitude_label"
            android:textSize="30sp"
            android:layout_below="@id/card1_speed_label" />
        <TextView
            android:id="@+id/in_flight_altitude"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text=" ..."
            android:layout_toEndOf="@id/card1_altitude_label"
            android:layout_below="@id/card1_speed_label" />


        <!--Remaining Fuel-->
        <TextView
            android:id="@+id/card1_fuel_label"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_label"
            android:textSize="30sp"
            android:layout_below="@id/card1_altitude_label" />
        <TextView
            android:id="@+id/in_flight_fuel"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text=" ..."
            android:layout_toEndOf="@id/card1_fuel_label"
            android:layout_below="@id/card1_altitude_label" />


        <!--Heading-->
        <TextView
            android:id="@+id/card1_heading_label"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading_label"
            android:textSize="30sp"
            android:layout_below="@id/card1_fuel_label" />
        <TextView
            android:id="@+id/in_flight_heading"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text=" ..."
            android:layout_toEndOf="@id/card1_heading_label"
            android:layout_below="@id/card1_fuel_label" />
    </RelativeLayout>

</LinearLayout>
