<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.utep.cs.pickax.fpms.ArchivedRoutes">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/RouteDetailTable"
                android:layout_marginTop="5dp"
                android:weightSum="100"
                android:stretchColumns="0,1,2,3,4,5,6,7">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/tv_name_col"
                        android:text="@string/name"
                        android:textStyle="bold"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:singleLine="false"
                        android:elegantTextHeight="false"
                        android:padding="5dp"/>

                    <TextView
                        android:text="@string/departuredest"
                        android:id="@+id/tv_departure_dest_col"
                        android:textStyle="bold"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:singleLine="false"
                        android:elegantTextHeight="false"
                        android:padding="5dp"/>

                    <TextView
                        android:text="@string/distance"
                        android:id="@+id/tv_dist_col"
                        android:textStyle="bold"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:singleLine="false"
                        android:elegantTextHeight="false"
                        android:padding="5dp"/>

                    <TextView
                        android:text="@string/speed"
                        android:id="@+id/tv_speed_col"
                        android:textStyle="bold"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:singleLine="false"
                        android:elegantTextHeight="false"
                        android:padding="5dp"/>

                    <TextView
                        android:text="@string/ete"
                        android:id="@+id/tv_ete_col"
                        android:textStyle="bold"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:singleLine="false"
                        android:elegantTextHeight="false"
                        android:padding="5dp"/>

                    <TextView
                        android:text="@string/number_waypoints"
                        android:id="@+id/tv_num_waypoints_col"
                        android:textStyle="bold"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:singleLine="false"
                        android:elegantTextHeight="false"
                        android:padding="5dp"/>

                    <TextView
                        android:text="@string/action_settings"
                        android:id="@+id/tv_settings_col"
                        android:textStyle="bold"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:singleLine="false"
                        android:elegantTextHeight="false"
                        android:padding="5dp"/>

                </TableRow>

                <View style="@style/Divider"
                    android:background="@android:color/darker_gray"
                    android:layout_below="@+id/RouteDistance" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <TextView
                        android:text="test name"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:singleLine="false"
                        android:elegantTextHeight="false"
                        android:padding="5dp"/>

                    <TextView
                        android:text="here - there"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:singleLine="false"
                        android:elegantTextHeight="false"
                        android:padding="5dp"/>

                    <TextView
                        android:text="24:00"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:singleLine="false"
                        android:elegantTextHeight="false"
                        android:padding="5dp"/>

                    <TextView
                        android:text="5000"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:singleLine="false"
                        android:elegantTextHeight="false"
                        android:padding="5dp"/>

                    <TextView
                        android:text="12:00"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:singleLine="false"
                        android:elegantTextHeight="false"
                        android:padding="5dp"/>

                    <TextView
                        android:text="56"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:singleLine="false"
                        android:elegantTextHeight="false"
                        android:padding="5dp"/>

                    <TextView
                        android:text="edit"
                        android:textColor="#ff518dff"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:singleLine="false"
                        android:elegantTextHeight="false"
                        android:onClick="showRouteDetails"
                        android:padding="5dp"/>

                </TableRow>

            </TableLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
